fix: corrigir erros de vídeo no player e criação de usuários
- Corrigir CSP no index.html: adicionar media-src para permitir vídeos remotos e do cache local
- Adicionar diagnóstico detalhado no onError do video (MediaError code)
- Implementar auto-limpeza de cache corrompido (DEMUXER_ERROR_BITSTREAM_CONVERSION_FAILED)
- Adicionar removeCached() no CacheManager para limpeza cirúrgica
- Adicionar IPC handler cache-remove-item e API removeCachedItem no preload
- Migrar criação de usuários para Edge Function create-user (auth.admin.createUser)
- Corrigir bug onde supabase.auth.signUp() trocava sessão do admin logado

--- a/player-windows/index.html
+++ b/player-windows/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://*.supabase.co wss://*.supabase.co;">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: media-cache:; media-src 'self' media-cache: https:; connect-src 'self' https://*.supabase.co wss://*.supabase.co; font-src 'self' data:;">
     <title>Rede Conecta Player</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { background: #0a0a0a; overflow: hidden; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: #0a0a0a;
+            overflow: hidden;
+        }
     </style>
 </head>
+
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
